hacky fix webkit overflow scroll

--- a/app/styles/layout.styl
+++ b/app/styles/layout.styl
@@ -21,7 +21,6 @@
     bottom 0
 
     &.ng-leave, &.ng-enter
-      -webkit-overflow-scrolling auto !important
       .animated-view
         position absolute
         top 0
